--- a/Instalador Majimomos/Instalador Majimomos.csproj
+++ b/Instalador Majimomos/Instalador Majimomos.csproj
@@ -50,16 +50,19 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="YakuzaKiwami2.cs">
+    <Compile Include="Kiwami2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="YakuzaKiwami2.Designer.cs">
-      <DependentUpon>YakuzaKiwami2.cs</DependentUpon>
+    <Compile Include="Kiwami2.Designer.cs">
+      <DependentUpon>Kiwami2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Kiwami2.resx">
+      <DependentUpon>Kiwami2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -71,9 +74,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="YakuzaKiwami2.resx">
-      <DependentUpon>YakuzaKiwami2.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -89,6 +89,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\yakuza_kiwami_2___icon_by_blagoicons_dd87ow6-fullview.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\steam.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gamepass.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
