--- a/Instalador Majimomos/Instalador Majimomos.csproj
+++ b/Instalador Majimomos/Instalador Majimomos.csproj
@@ -31,6 +31,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>majimomos.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -95,6 +98,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\gamepass.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Kiwami2Background.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="majimomos.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
